# fullstackrustapp

backend/: Cargo.toml
backend/src/: handler.rs  main.rs  model.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: api.rs  main.rs  store.rs
frontend/src/components/: loginform.rs  mod.rs
